--- a/view.html
+++ b/view.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<div id="timeroverlay"></div>
+	<button onclick="document.documentElement.requestFullscreen()">Fullscreen</button>
 </body>
 </html>
